fixed login/register overflow in css

--- a/src/main/resources/static/stylesheets/authentication-flow.css
+++ b/src/main/resources/static/stylesheets/authentication-flow.css
@@ -11,15 +11,19 @@
 }
 .wrapper {
     width: 423px;
-    height: 72vh;
-    overflow: hidden;
+    height: 680px;
+    max-height: fit-content;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin: 5%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(20px);
-    color: white;
     border-radius: 10px;
     padding: 20px 40px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Sosy Logo */
